--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <div class="header" th:fragment="bodyHeader">
-<!--    <ul class="nav nav-pills pull-right">-->
-<!--        <li><a href="/">Home</a></li>-->
-<!--    </ul>-->
-<!--    <div class="form-inline"><img src="/logo.svg" height="32px">-->
-    <a href="/"><h4 class="text-muted">자격증 대비 모의 고사</h4></a>
-
+    <div class="form-inline d-flex justify-content-between">
+        <a href="/"><h5 class="text-bheader"><img src="/logo.svg" height="28px"> QUIZ</h5></a>
+        <a href="https://garve32.tistory.com/category/Etc/AWS" target="_blank" rel="noreferrer noopener"><h5 class="text-bheader"><img src="/tistory.svg" height="28px"></h5></a>
+    </div>
 </div>
