--- a/src/main/resources/templates/fragments/resultDetail.html
+++ b/src/main/resources/templates/fragments/resultDetail.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<div th:fragment="resultDetail(detail)">
+<div th:fragment="resultDetail(detail, idx)">
 
     <div class="card mb-3" id="q_item">
-        <h5 class="card-header" th:classappend="${detail.question.correct_yn eq 'Y'?'text-primary':'text-danger'}"
-            th:text="${detail.question.correct_yn eq 'Y'?'맞은 문제':'틀린 문제'}">맞은 문제
+
+        <h5 class="card-header" th:if="${detail.question.correct_yn eq 'Y'}">
+            <span class="badge badge-primary" th:text="|Q${idx}.맞음|">맞음</span>
+        </h5>
+        <h5 class="card-header" th:unless="${detail.question.correct_yn eq 'Y'}">
+            <span class="badge badge-danger" th:text="|Q${idx}.틀림|">틀림</span>
         </h5>
         <div class="card-body">
-            <p class="card-text" style="white-space: pre-line" th:utext="${detail.question.text}" />
-            <div class="image-area mb-3" th:if="${detail.question.image}">
-                <img id="imageResult" th:if="${detail.question.image}" th:src="*{'data:image/png;base64,'+ detail.question.image}" alt="" class="img-fluid rounded shadow-sm mx-auto d-block">
+            <p class="card-text font-size-85" style="white-space: pre-line" th:utext="|Q${idx}. ${detail.question.text}|" />
+            <div class="image-area mb-3" th:if="${detail.question.encoded_image}">
+                <img id="imageResult" th:if="${detail.question.encoded_image}" th:src="*{'data:image/png;base64,'+ detail.question.encoded_image}" alt="" class="img-fluid rounded shadow-sm mx-auto d-block">
             </div>
 
             <hr class="my-4">
 
-            <div class="form-check px-4 py-2" th:each="option : ${detail.options}">
-                <input th:type="${detail.question.type == 'S'?'radio':'checkbox'}" th:checked="${option.select_yn eq 'Y'}" class="form-check-input" disabled>
-                <label th:text="${option.text}" class="form-check-label">ITEM</label>
-                <span class="badge badge-primary" th:if="${option.correct_yn eq 'Y'}">(정답)</span>
+            <div class="form-check" th:each="option : ${detail.options}">
+                <input th:type="${detail.question.type == 'S'?'radio':'checkbox'}" th:checked="${option.select_yn eq 'Y'}" class="form-check-input form-check-inline selected" disabled>
+                <label th:text="${option.text}" class="form-check-label d-inline font-size-85">ITEM</label>
+                <span class="badge badge-success" th:if="${option.correct_yn eq 'Y'}">정답</span>
             </div>
         </div>
     </div>
