--- a/src/main/resources/templates/loginHome.html
+++ b/src/main/resources/templates/loginHome.html
@@ -6,18 +6,18 @@
 
 <div class="container">
     <div th:replace="fragments/bodyHeader :: bodyHeader" />
-    <div class="py-4 text-center">
+    <div class="py-2 text-center">
         <h4>마이페이지</h4>
     </div>
 
     <hr class="my-4">
 
     <div class="row">
-        <div class="col align-self-center">
-            <h5 class="my-1" th:text="|이름 : ${user.name}|">이름</h5>
+        <div class="col-8 align-self-center">
+            <h5 class="my-1" th:text="|닉네임 : ${user.name}|">이름</h5>
 
         </div>
-        <div class="col">
+        <div class="col-4">
             <form th:action="@{/logout}" method="post">
                 <button class="btn btn-dark float-right">로그아웃</button>
             </form>
@@ -28,38 +28,30 @@
 
     <div class="row">
         <div class="col">
-            <button class="w-100 btn btn-primary " type="button"
+            <button class="w-100 btn btn-lg btn-primary " type="button"
                     th:onclick="|location.href='@{/questions/category}'|">
                 시험 시작
             </button>
         </div>
         <div class="col">
-            <button class="w-100 btn btn-outline-primary " type="button"
-                    th:onclick="|location.href='@{/questions/history}'|">
+            <button class="w-100 btn btn-lg btn-outline-primary " type="button"
+                    th:onclick="|location.href='@{/his/list}'|">
                 시험 이력 <span class="badge badge-info" th:text="${uqCnt}">0</span>
             </button>
         </div>
 
-<!--        <div class="col px-1" th:if="${user.admin_yn.equals('Y')}">-->
-<!--            <button class="w-100 btn btn-success " type="button"-->
-<!--                    th:onclick="|location.href='@{/admin}'|">-->
-<!--                문제 관리-->
-<!--            </button>-->
-<!--        </div>-->
     </div>
 
-    <hr class="my-4">
+<!--    <hr class="my-4">-->
 
-    <div class="row">
-        <div class="col" th:if="${user.admin_yn.equals('Y')}">
-            <button class="w-100 btn btn-success " type="button"
+    <div class="row my-2" th:if="${user.admin_yn.equals('Y')}">
+        <div class="col">
+            <button class="w-100 btn btn-lg btn-success " type="button"
                     th:onclick="|location.href='@{/admin/questions}'|">
                 문제 관리
             </button>
         </div>
     </div>
-
-
 
     <div th:replace="fragments/footer :: footer" />
 </div> <!-- /container -->
