--- a/src/main/resources/templates/questions/historyDetail.html
+++ b/src/main/resources/templates/questions/historyDetail.html
@@ -12,6 +12,8 @@
     </div>
 
     <hr class="my-4">
+    <button class="btn btn-sm btn-outline-primary"
+        th:onclick="|location.href='@{/his/list}'|">< 목록으로</button>
 
     <div th:replace="fragments/hisDetail :: hisDetail(r=${r})" />
 
