--- a/src/main/resources/templates/questions/question.html
+++ b/src/main/resources/templates/questions/question.html
@@ -7,10 +7,6 @@
 
     <div th:replace="fragments/bodyHeader :: bodyHeader" />
 
-<!--    <div id="q_item">-->
-<!--        <h5 class="card-title" th:text="${q.text}">question title</h5>-->
-<!--    </div>-->
-<!--    th:text="${progress}"-->
     <div class="card" id="q_item">
         <h5 class="card-header" >
             <div th:text="${progress}">1/3</div>
@@ -33,7 +29,6 @@
             </div>
         </div>
     </div>
-
 
     <div class="row py-2">
         <div class="col">
@@ -90,7 +85,6 @@
 
         function endQuestion() {
             // 현재 문제는 완료처리
-            console.log(uq);
             p_set[idx] = 2;
 
             let chk_arr = [];
@@ -101,7 +95,7 @@
             let chk_str = chk_arr.join(":");
 
             //const A = $('input[name="ans"]:checked').val();
-            if(chk_str == null) {
+            if(chk_str.trim().length === 0) {
                 a_set[idx] = 0;
             } else {
                 a_set[idx] = chk_str;
@@ -115,11 +109,6 @@
             uq.end_dt = timezoneDate.toISOString().substring(0, 19);
 
             let param = "";
-            console.log(uq);
-
-            // for(var i=0; i<uq.length; i++) {
-            //     param+=<input type='hidden' name='"+ d.vals[i][0] +"' value='"+ d.vals[i][1] +"'>";
-            // }
 
             for (const [key, value] of Object.entries(uq)) {
                 param += "<input type='hidden' name='"+ key +"' value='"+ value +"'/>";
@@ -136,7 +125,7 @@
         }
 
         function nextQuestion() {
-            console.log(uq);
+            //console.log(uq);
             // 현재 문제는 완료처리
             p_set[idx] = 2;
 
@@ -147,14 +136,12 @@
             })
             let chk_str = chk_arr.join(":");
 
-            if(chk_str == null) {
+            if(chk_str.trim().length === 0) {
                 a_set[idx] = 0;
             } else {
                 a_set[idx] = chk_str;
             }
 
-
-            //a_set[idx] = $('input[name="ans"]:checked').val();
             uq.answer_set = a_set;
 
             if(idx == q_set.length - 1) {
@@ -165,7 +152,6 @@
                     type: "post",
                     data: uq,
                     success: function (response) {
-                        console.log(response)
                         window.location.href = response;
                     },
                     error: function (response) {
@@ -187,7 +173,6 @@
                     type: "post",
                     data: uq,
                     success: function (response) {
-                        console.log(response)
                         $("#q_item").replaceWith(response);
 
                         if(idx == q_set.length - 1) {
