--- a/src/main/resources/templates/users/addUserForm.html
+++ b/src/main/resources/templates/users/addUserForm.html
@@ -7,13 +7,13 @@
 <div class="container">
     <div th:replace="fragments/bodyHeader :: bodyHeader" />
 
-    <div class="py-5 text-center">
-        <h2>회원 가입</h2>
+    <div class="py-2 text-center">
+        <h4>사용자 등록</h4>
     </div>
 
-    <h4 class="mb-3">회원 정보 입력</h4>
     <div class="alert alert-warning" role="alert">
-        회원정보 검색 및 비밀번호 찾기 기능은 제공되지 않습니다.
+        <p><strong>사용자 정보 검색 및 비밀번호 찾기 기능은 제공되지 않습니다.</strong></p>
+        <p class="mb-0">민감한 개인정보는 입력하지 마세요.</p>
     </div>
 
     <form action="" th:action th:object="${user}" method="post">
@@ -22,31 +22,42 @@
             <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메시지</p>
         </div>
 
-        <div>
-            <label for="login_id">로그인 ID</label>
-            <input type="text" id="login_id" th:field="*{login_id}" class="form-control"
-                   th:errorclass="field-error">
+        <div class="my-3">
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" style="min-width: 100px">로그인 ID</span>
+                </div>
+                <input type="text" th:field="*{login_id}" class="form-control" th:errorclass="field-error" th:placeholder="ID"/>
+            </div>
+
             <div class="field-error" th:errors="*{login_id}" />
         </div>
-        <div>
-            <label for="password">비밀번호</label>
-            <input type="password" id="password" th:field="*{password}" class="form-control"
-                   th:errorclass="field-error">
+        <div class="my-3">
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" style="min-width: 100px">비밀번호</span>
+                </div>
+                <input type="password" th:field="*{password}" class="form-control" th:errorclass="field-error" th:placeholder="PASSWORD"/>
+            </div>
+
             <div class="field-error" th:errors="*{password}" />
         </div>
-        <div>
-            <label for="name">이름</label>
-            <input type="text" id="name" th:field="*{name}" class="form-control"
-                   th:errorclass="field-error">
+        <div class="my-3">
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" style="min-width: 100px">닉네임</span>
+                </div>
+                <input type="text" th:field="*{name}" class="form-control" th:errorclass="field-error" th:placeholder="NICKNAME"/>
+            </div>
+
             <div class="field-error" th:errors="*{name}" />
         </div>
-
 
         <hr class="my-4">
 
         <div class="row">
             <div class="col">
-                <button class="w-100 btn btn-primary btn-lg" type="submit">회원 가입</button>
+                <button class="w-100 btn btn-primary btn-lg" type="submit">사용자 등록</button>
             </div>
             <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg" onclick="location.href='items.html'"
