사용자 등록 API 추가

--- a/src/main/resources/templates/fragments/hisItem.html
+++ b/src/main/resources/templates/fragments/hisItem.html
@@ -2,29 +2,32 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="hisItem(d, idx)">
 
-    <div class="card mb-3 p-2">
+    <div class="card my-1 p-1">
         <div class="form-row">
-            <div class="col-sm-2 d-none d-sm-block">
+            <div class="col-sm-1 align-self-center d-none d-sm-block">
                 <canvas th:id="|chart-${idx}|"></canvas>
             </div>
-            <div class="col-sm-auto">
-                <h6 th:text="|카테고리 : ${d.category_nm}|"></h6>
-                <h5>
+            <div class="col-sm-11">
+                <p class="mb-0" th:text="|카테고리 : ${d.category_nm}|"></p>
+                <h5 class="d-flex justify-content-between mb-0 align-items-end">
+                    <div>
                     <span class="badge" th:text="${d.success_cd_nm}" th:classappend="${d.success_cd_nm eq '합격'? 'badge-success':'badge-danger'}"></span>
-<!--                    <span th:text="|(합격하려면 ${d.success_per}%를 달성해야 함)|" th:remove="tag"></span>-->
+                        <br class="d-block d-sm-none">
                     <span th:text="|${d.correct_per}% 정답|" th:remove="tag"></span>
                     <span th:text="|(${d.correct_cnt}/${d.total_q_cnt})|" th:remove="tag"></span>
+                    </div>
+
+                    <div class="font-size-85">
+                        <span th:text="${d.start_dt}"></span>
+                        <span> ~ </span>
+                        <br class="d-block d-sm-none">
+                        <span th:text="${d.end_dt}"></span>
+                    </div>
                     <button class="btn btn-sm btn-outline-secondary"
                             th:onclick="|location.href='@{/his/detail}/${d.id}'|">
-                        상세 문제 검토
+                        상세<br class="d-block d-sm-none">결과
                     </button>
                 </h5>
-
-                <span th:text="${d.start_dt}"></span>
-                <span> ~ </span>
-                <br class="d-block d-sm-none">
-                <span th:text="${d.end_dt}"></span>
-
             </div>
         </div>
 
@@ -62,7 +65,7 @@
                     type: 'doughnut',
                     data: data,
                     options : {
-                        cutout: '75%',
+                        cutout: '50%',
                         plugins: {
                             legend: {
                                 display: false,
