--- a/src/main/resources/templates/fragments/hisDetail.html
+++ b/src/main/resources/templates/fragments/hisDetail.html
@@ -8,19 +8,23 @@
             <canvas id="myChart"></canvas>
         </div>
         <div class="col-md-8">
-<!--            style="font-weight: 900"-->
             <h2>
                 <span class="badge" th:text="${r.success_cd_nm}" th:classappend="${r.success_cd_nm eq '합격'? 'badge-success':'badge-danger'}"></span>
             </h2>
             <p th:text="|(합격하려면 ${r.success_per}%를 달성해야 함)|"></p>
-            <ul class="list-inline">
-                <li class="list-inline-item"><h2 th:text="|${r.correct_per}% 정답|"></h2></li>
+            <ul class="list-inline my-0">
+                <li class="list-inline-item"><h2 style="font-weight: 900" th:text="|${r.correct_per}% 정답|"></h2></li>
                 <li class="list-inline-item"><p th:text="|(${r.correct_cnt} / ${r.total_q_cnt})|"></p></li>
             </ul>
             <p th:text="|${r.start_dt} - ${r.end_dt}|"></p>
-            <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                상세 문제 검토
-            </button>
+            <div class="d-flex justify-content-between">
+                <button class="btn btn-sm btn-outline-primary" th:onclick="|location.href='@{/his/list}'|">
+                    < 목록으로
+                </button>
+                <button class="btn btn-sm btn-outline-secondary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    상세 문제 검토
+                </button>
+            </div>
         </div>
     </div>
 
@@ -35,15 +39,14 @@
 
         <div class="row">
 
-            <div class="col-10" id="rd-div">
+            <div class="col-10" data-spy="scroll" data-target="#rd-div" data-offset="0">
                 <div th:unless="${#lists.isEmpty(r.resultDetails)}" th:each="detail, stat : ${r.resultDetails}"
                     th:id="|rd-${stat.count}|">
                     <div th:replace="fragments/resultDetail :: resultDetail(detail=${detail}, idx=${stat.count})"></div>
                 </div>
             </div>
             <div class="col-2">
-                <div class="row sticky-top" data-spy="scroll" data-target="#rd-div" data-offset="0">
-                    <p class="col-12"></p>
+                <div class="row sticky-top pt-1">
                     <a class="px-2 font-weight-bold" th:text="${stat.count}" th:classappend="${detail.question.correct_yn eq 'Y'? 'text-primary':'text-danger'}"
                         th:each="detail, stat : ${r.resultDetails}" th:href="'#'+|rd-${stat.count}|">1</a>
                 </div>
