--- a/src/main/resources/templates/users/addUserForm.html
+++ b/src/main/resources/templates/users/addUserForm.html
@@ -15,6 +15,9 @@
         <p><strong>사용자 정보 검색 및 비밀번호 찾기 기능은 제공되지 않습니다.</strong></p>
         <p class="mb-0">민감한 개인정보는 입력하지 마세요.</p>
     </div>
+    <div class="alert alert-danger" role="alert">
+        <p class="mb-0">개인이 사용하는 실제 비밀번호를 입력하지 마세요.</p>
+    </div>
 
     <form action="" th:action th:object="${user}" method="post">
 
