--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -1,3 +1,7 @@
+html {
+  font-size: 12px;
+}
+
 .input-group-sm > .custom-file,
 .input-group-sm > .custom-file >.custom-file-input,
 .input-group-sm > .custom-file >.custom-file-label {
