--- a/src/main/resources/templates/admin/detailQuestionForm.html
+++ b/src/main/resources/templates/admin/detailQuestionForm.html
@@ -135,7 +135,7 @@
 
             <div class="row">
                 <div class="col">
-                    <button type="button" th:onclick="|location.href='@{/admin/questions}'|" class="btn btn-secondary w-100">문제 목록</button>
+                    <button type="button" th:onclick="|location.href='@{/admin/questions(category_id=${#httpServletRequest.getParameter('category_id')},searchKeyword=${#httpServletRequest.getParameter('searchKeyword')},currentPageNo=${#httpServletRequest.getParameter('currentPageNo')})}'|" class="btn btn-secondary w-100">문제 목록</button>
                 </div>
                 <div class="col">
                     <button type="submit" th:text="${#strings.isEmpty(q.question.id) ?'문제 등록':'문제 수정'}" class="btn btn-primary w-100">문제 등록</button>
