--- a/src/main/resources/templates/admin/questions.html
+++ b/src/main/resources/templates/admin/questions.html
@@ -18,17 +18,20 @@
         <div class="row my-4 mx-1">
             <div class="input-group input-group-sm" id="searchForm">
                 <div class="input-group-prepend">
-                    <select class="form-control form-control-sm" id="searchType" th:name="searchType">
-                        <option value="category">카테고리</option>
-                        <option value="title">문제</option>
-                    </select>
-<!--                    <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">Dropdown</button>-->
-<!--                    <div class="dropdown-menu">-->
-<!--                        <a class="dropdown-item" href="#">카테고리</a>-->
-<!--                        <a class="dropdown-item" href="#">문제</a>-->
-<!--                    </div>-->
+                    <span class="input-group-text">카테고리</span>
                 </div>
-                <input type="text" class="form-control input-group-append" id="searchKeyword" name="searchKeyword" th:value="${searchKeyword}" placeholder="검색어" aria-label="Search Category" aria-describedby="button-addon4">
+                <select class="form-control form-control-sm" id="category_id" name="category_id">
+                    <option value="">선택하세요</option>
+                    <option th:each="c : ${categoryList}"
+                            th:value="${c.id}"
+                            th:text="${c.name}"
+                            th:selected="${params.category_id != null and c.id == params.category_id}">
+                    </option>
+                </select>
+                <div class="input-group-prepend">
+                    <span class="input-group-text">제목</span>
+                </div>
+                <input type="text" class="form-control input-group-append" id="searchKeyword" name="searchKeyword" th:value="${params.searchKeyword}" placeholder="문제 제목 검색" aria-label="Search Title" aria-describedby="button-addon4">
                 <div class="input-group-append" id="button-addon4">
                     <button type="submit" class="btn btn-sm btn-outline-secondary" >검색</button>
                     <button type="button" class="btn btn-sm btn-outline-secondary" th:onclick="|location.href='@{/admin/questions}'|">초기화</button>
@@ -50,7 +53,11 @@
             <tbody>
             <tr th:each="item : ${list}">
                 <td><span th:text="${item.id}">id</span></td>
-                <td><a th:href="|/admin/question/${item.id}|"><span th:text="${#strings.abbreviate(item.text,75)}">text</span></a></td>
+                <td>
+                    <a th:href="@{/admin/question/{id}(id=${item.id}, category_id=${params.category_id}, searchKeyword=${params.searchKeyword}, currentPageNo=${params.currentPageNo})}">
+                        <span th:text="${#strings.abbreviate(item.text,75)}">text</span>
+                    </a>
+                </td>
                 <td><span th:text="${item.category_nm}">category_nm</span></td>
             </tr>
             </tbody>
