--- a/src/main/resources/templates/loginHome.html
+++ b/src/main/resources/templates/loginHome.html
@@ -62,6 +62,15 @@
         </div>
     </div>
 
+    <div class="row my-2" th:if="${user.admin_yn.equals('Y')}">
+        <div class="col">
+            <button class="w-100 btn btn-lg btn-success " type="button"
+                    th:onclick="|location.href='@{/admin/stats}'|">
+                통계 관리
+            </button>
+        </div>
+    </div>
+
     <div th:replace="fragments/footer :: footer" />
 </div> <!-- /container -->
 
