--- a/src/main/resources/templates/loginHome.html
+++ b/src/main/resources/templates/loginHome.html
@@ -44,6 +44,17 @@
 
 <!--    <hr class="my-4">-->
 
+
+
+    <div class="row my-2" th:if="${user.admin_yn.equals('Y')}">
+        <div class="col">
+            <button class="w-100 btn btn-lg btn-success " type="button"
+                    th:onclick="|location.href='@{/admin/categories}'|">
+                카테고리 관리
+            </button>
+        </div>
+    </div>
+
     <div class="row my-2" th:if="${user.admin_yn.equals('Y')}">
         <div class="col">
             <button class="w-100 btn btn-lg btn-success " type="button"
@@ -56,8 +67,8 @@
     <div class="row my-2" th:if="${user.admin_yn.equals('Y')}">
         <div class="col">
             <button class="w-100 btn btn-lg btn-success " type="button"
-                    th:onclick="|location.href='@{/admin/categories}'|">
-                카테고리 관리
+                    th:onclick="|location.href='@{/admin/explains}'|">
+                해설 관리
             </button>
         </div>
     </div>
